# dfs-dork-optimizer

./: .gitignore  README.md  pyproject.toml
optimizer/: app.py  optimizer.py
optimizer/adapters/: yahoo.py
optimizer/api/: yahoo.py
optimizer/util/: player.py
