[tool.poetry]
name = "dfs-dork-optimizer"
version = "0.1.0"
description = ""
authors = ["Marco Di Spirito <marco.n.dispirito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
pydfs-lineup-optimizer = "^3.6.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
